5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1834_2603.log
== SUBMITION (2019-07-01 21:41:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

q = array(eval(input("")))

for i in range(shape(q)[i]):
	
	q[:,i] = sorted(a[:,i] , reverse = True)

print(q)
-- EXECUTION TIME:
0.971984
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2603/main.py", line 6, in <module>
    for i in range(shape(q)[i]):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:42:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

q = array(eval(input("")))

for i in range(shape(q)[1]):
	
	q[:,i] = sorted(a[:,i] , reverse = True)

print(q)
-- EXECUTION TIME:
0.803039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2603/main.py", line 8, in <module>
    q[:,i] = sorted(a[:,i] , reverse = True)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:43:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

q = array(eval(input("")))

for i in range(shape(q)[1]):
	
	q[:,i] = sorted(a[:,i] , reverse = True)

print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:43:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

q = array(eval(input("")))

for i in range(shape(q)[1]):
	
	q[:,i] = sorted(q[:,i] , reverse = True)

print(q)
-- EXECUTION TIME:
0.955905
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
